
2006/09/27 Sarka Todorova <sarka.todorova@cern.ch>
	* eta/phi sectors (optional) implemented
	* gluing to Calo tested 
	* tagged MuonTrackingGeometry-00-00-15 

2006/09/27 Sarka Todorova <sarka.todorova@cern.ch>
	* fix offending statements in MuonInertMaterialBuilder
	* tagged MuonTrackingGeometry-00-00-14 

2006/09/20 Sarka Todorova <sarka.todorova@cern.ch>
	* fix volumes with ordered layers 
	  (bin utility covers the whole volume even if layers do not)
	* tagged MuonTrackingGeometry-00-00-13 

2006/09/15 Sarka Todorova <sarka.todorova@cern.ch>
	* update requirements (use statements) 
	* add printInfo() to the configuration script
	* fix stations with cutouts
	* tagged MuonTrackingGeometry-00-00-12 

2006/09/08 Sarka Todorova <sarka.todorova@cern.ch>
	* update requirements
	* tagged MuonTrackingGeometry-00-00-11 

2006/09/07 Sarka Todorova <sarka.todorova@cern.ch>
	* updates from Marcin:
	* endcap toroids 
	* cylinder volumes in MuonTrackingGeometryBuilder 
        * tagged MuonTrackingGeometry-00-00-10

2006/09/05 Sarka Todorova <sarka.todorova@cern.ch>
	* identification of active layers
	* inert material included (barrel toroids) 
        * tagged MuonTrackingGeometry-00-00-09

2006/06/23 Sarka Todorova <sarka.todorova@cern.ch>
	* active material included 
        * tagged MuonTrackingGeometry-00-00-07

2006/05/15 Sarka Todorova <sarka.todorova@cern.ch>
	* bug fixed (wrong cylinder surface called for beam pipe glueing) 
        * tagged MuonTrackingGeometry-00-00-06

2006/05/11 Sarka Todorova <sarka.todorova@cern.ch>
        * first attempt to close the global tracking geometry
	* using up-to-date gluing tools
	* tagged MuonTrackingGeometry-00-00-05
	* intermediate versions concerned bux fixing and modified interface (obsolete) 
	
13/02/2006 version 00-00-01 /S.T./

	returns closed tracking geometry in 2 versions
	a/ "MuonSimple = True" single global volume (analog to worldVolume)
	b/ "MuonSimple = False" mimics MuonEnvelope with cut out for cavern description